RESOLVED FIXED118522
[EFL] tooltip callback doesn't work.
https://bugs.webkit.org/show_bug.cgi?id=118522
Summary [EFL] tooltip callback doesn't work.
Byungwoo Lee
Reported 2013-07-09 22:23:25 PDT
Need to add missing code to connect didChangeTooltip callback.
Attachments
Patch (1.36 KB, patch)
2013-07-09 22:24 PDT, Byungwoo Lee
no flags
Byungwoo Lee
Comment 1 2013-07-09 22:24:49 PDT
Chris Dumez
Comment 2 2013-07-09 22:30:50 PDT
Comment on attachment 206366 [details] Patch r=me.
WebKit Commit Bot
Comment 3 2013-07-09 23:11:10 PDT
Comment on attachment 206366 [details] Patch Clearing flags on attachment: 206366 Committed r152525: <http://trac.webkit.org/changeset/152525>
WebKit Commit Bot
Comment 4 2013-07-09 23:11:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.