[EFL] tooltip callback doesn't work. https://bugs.webkit.org/show_bug.cgi?id=118522

Reviewed by Christophe Dumez.

Add missing code to connect didChangeTooltip callback.

* UIProcess/efl/ViewClientEfl.cpp:
(WebKit::ViewClientEfl::ViewClientEfl):


Canonical link: https://commits.webkit.org/136479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152525 268f45cc-cd09-0410-ab3c-d52691b4dbfc